Fixed buttontext to not wrap

--- a/app/src/assets/scss/main-style.scss
+++ b/app/src/assets/scss/main-style.scss
@@ -517,6 +517,7 @@ button, .link-button {
             display         : flex;  
             justify-content : center;
             align-items     : center;
+            white-space     : nowrap;
     
             button, a {
                 padding    : 12px 24px;     
